--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Cutie Hacks</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
@@ -24,7 +24,7 @@
 
   <body>
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle">
+    <!-- <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle">
       <i class="fa fa-bars"></i>
     </a>
     <nav id="sidebar-wrapper">
@@ -45,7 +45,7 @@
           <a class="js-scroll-trigger" href="#contact" onclick=$( "#menu-close").click();>Contact</a>
         </li>
       </ul>
-    </nav>
+    </nav> -->
 
     <!-- Header -->
     <header class="header" id="top">
@@ -73,24 +73,23 @@
 
     <!-- Services -->
     <section id="services" class="services bg-primary text-white">
+      <header class="align-center">
+          <h1>Frequently Asked Questions</h1>
+          <br><br><br>
+      </header>
       <div class="container">
         <div class="row text-center">
-          <div class="col-lg-8 mx-auto">
-              <header class="align-center">
-                  <h1>Frequently Asked Questions</h1>
-                  <br>
-              </header>
               <div class="flex flex-4">
                 <div class="col align-center">
                     <i class="fa fa-user fa-5x"></i>
                     <h3>Who can attend?</h3>
-                    <p class="answer">All undergraduate university students. Recently graduated? You're welcome to attend if you graduated within the past year. All participants must adhere to <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH's Code of Conduct</a></p>
+                    <p class="answer">We currently only accept UCR and local community college students 18 or older to participate. High School students are welcome to apply, but will be required to sign a waiver.</a></p>
                 </div>
 
                 <div class="col align-center">
                     <i class="fa fa-briefcase fa-5x"></i>
                     <h3>What do I bring?</h3>
-                    <p class="answer">We require all participants to bring their student IDs. Also consider bringing some of the following: a hacking machine, cables for your hacking machine, headphones, pillow, and an extra set of clothes.</p>
+                    <p class="answer">Bring your student ID, computer, and any peripherals you may need (i.e. chargers, monitors, etc). We encourage our hackers to bring any hardware that you plan on using.</p>
                 </div>
 
                 <div class="col align-center">
@@ -101,8 +100,8 @@
 
                 <div class="col align-center">
                     <i class="fa fa-money fa-5x"></i>
-                    <h3>How much does Citrus Hack cost?</h3>
-                    <p class="answer">Citrus Hack is absolutely free to attend!</p>
+                    <h3>How much does Cutie Hack cost?</h3>
+                    <p class="answer">Cutie Hack is absolutely free to attend!</p>
                 </div>
               </div>
               <div class="flex flex-4">
@@ -119,14 +118,13 @@
                 <div class="col align-center">
                     <i class="fa fa-users fa-5x"></i>
                     <h3>Do I need a team? How large can my team be?</h3>
-                    <p class="answer">We recommend working in a team. There will be a team formation event before hacking begins. Team sizes are capped at 4 members.</p>
+                    <p class="answer">We recommend working in a team. There will be a team formation event before hacking beings. Team sizes are capped at 4 members.</p>
                 </div>
                 <div class="col align-center">
                     <i class="fa fa-calendar fa-5x"></i>
                     <h3>I signed up! When do I hear back?</h3>
-                    <p class="answer">Challenge application results will be released in early September. Normal application results will be released late September.</p>
+                    <p class="answer">Application results will be released 1 - 2 weeks pior to the event!</p>
                 </div>
-              </div>
             </div>
             <!-- /.row (nested) -->
           </div>
@@ -135,6 +133,25 @@
         <!-- /.row -->
       </div>
       <!-- /.container -->
+    </section>
+
+    <section id="about" class="about">
+      <div class="container text-center">
+        <!-- Organizers-->
+        <header class="align-center">
+            <h1>Organizers</h1>
+            <br><br><br>
+        </header>
+        <div class="flex flex-2">
+            <div class="col align-center">
+                <a href="http://acmucr.org"><img src="img/acm.png" width="60%"></a>
+            </div>
+            <div class="col align-center">
+                <a href="http://ieee.ee.ucr.edu/"><img src="img/ieee.png" width="40%"></a>
+            </div>
+        </div>
+
+      </div>
     </section>
 
     <!-- Map -->
@@ -152,7 +169,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
             <h4>
-              <strong>Citrus Hack V4</strong>
+              <strong>Cutie Hack V4</strong>
             </h4>
             <p>Winston Chung Hall
               <br>Riverside, CA 92507</p>
