Update with MIT stuff

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
 
     <meta charset="utf-8">
+    <link rel="icon" href="img/logo.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Cutie Hack is a 12 hours hackathon hosted by ACM@UCR and IEEE@UCR. A hackathon is a makerspace where collegiate students come together to build, innovate, and collaborate on remarkable products for humanity!">
     <meta name="author" content="Patrick Le">
@@ -24,7 +25,7 @@
 
   <body>
     <!-- Navigation -->
-    <!-- <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle">
+    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle">
       <i class="fa fa-bars"></i>
     </a>
     <nav id="sidebar-wrapper">
@@ -42,10 +43,10 @@
           <a class="js-scroll-trigger" href="#services">Apply</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#contact" onclick=$( "#menu-close").click();>Contact</a>
+          <a class="js-scroll-trigger" href="#contacts" onclick=$( "#menu-close").click();>Contact</a>
         </li>
       </ul>
-    </nav> -->
+    </nav>
 
     <!-- Header -->
     <header class="header" id="top">
@@ -61,6 +62,7 @@
     <section id="about" class="about">
       <div class="container text-center">
         <h2>Welcome to the 4th Annual Cutie Hacks!</h2>
+        <br>
         <p class="lead">Cutie Hack is back this year for another round of hacking!</p>
         <p class="lead">We are welcoming people of all skills levels to come out and join us for our 12 hour hackathon.
                         Be prepared to juice out all the creativity you have!</p>
@@ -79,7 +81,7 @@
       </header>
       <div class="container">
         <div class="row text-center">
-              <div class="flex flex-4">
+              <div class="flex flex-2">
                 <div class="col align-center">
                     <i class="fa fa-user fa-5x"></i>
                     <h3>Who can attend?</h3>
@@ -91,7 +93,10 @@
                     <h3>What do I bring?</h3>
                     <p class="answer">Bring your student ID, computer, and any peripherals you may need (i.e. chargers, monitors, etc). We encourage our hackers to bring any hardware that you plan on using.</p>
                 </div>
+              </div>
+              <br><br><br>
 
+              <div class="flex flex-2">
                 <div class="col align-center">
                     <i class="fa fa-cutlery fa-5x"></i>
                     <h3>Will there be food?</h3>
@@ -104,17 +109,9 @@
                     <p class="answer">Cutie Hack is absolutely free to attend!</p>
                 </div>
               </div>
-              <div class="flex flex-4">
-                <div class="col align-center">
-                    <i class="fa fa-plane fa-5x"></i>
-                    <h3>Are there travel reimbursments?</h3>
-                    <p class="answer">We currently do not support any form of travel reimbursements; however, we are working towards adding this benefit.</p>
-                </div>
-                <div class="col align-center">
-                    <i class="fa fa-terminal fa-5x"></i>
-                    <h3>Do I have to be a programmer?</h3>
-                    <p class="answer">Absolutely not! It doesn’t matter if you are a designer, a writer, or a chemistry major. There is a place for you here. There will be a team formation session at the beginning of the event to help form teams.</p>
-                </div>
+              <br><br><br>
+
+              <div class="flex flex-2">
                 <div class="col align-center">
                     <i class="fa fa-users fa-5x"></i>
                     <h3>Do I need a team? How large can my team be?</h3>
@@ -125,7 +122,8 @@
                     <h3>I signed up! When do I hear back?</h3>
                     <p class="answer">Application results will be released 1 - 2 weeks pior to the event!</p>
                 </div>
-            </div>
+              </div>
+              <br><br><br>
             <!-- /.row (nested) -->
           </div>
           <!-- /.col-lg-10 -->
@@ -140,7 +138,7 @@
         <!-- Organizers-->
         <header class="align-center">
             <h1>Organizers</h1>
-            <br><br><br>
+            <br>
         </header>
         <div class="flex flex-2">
             <div class="col align-center">
@@ -150,21 +148,21 @@
                 <a href="http://ieee.ee.ucr.edu/"><img src="img/ieee.png" width="40%"></a>
             </div>
         </div>
-
       </div>
     </section>
+    <br><br>
 
     <!-- Map -->
     <section id="contact" class="map">
-      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.672160180548!2d-117.32812878478704!3d33.97526498062698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcae5acf0fa1e7%3A0xa67be5dc0009c039!2sWinston+Chung+Hall%2C+Riverside%2C+CA+92507!5e0!3m2!1sen!2sus!4v1506636389909"></iframe>
-      <br/>
+      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1654.3360501286727!2d-117.32668928636255!3d33.975266520485995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcae5acf0fa1e7%3A0xa67be5dc0009c039!2sWinston+Chung+Hall%2C+Riverside%2C+CA+92507!5e0!3m2!1sen!2sus!4v1506657667501" style="pointer-events: none;"></iframe>
+      <br>
       <small>
-        <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.672160180548!2d-117.32812878478704!3d33.97526498062698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcae5acf0fa1e7%3A0xa67be5dc0009c039!2sWinston+Chung+Hall%2C+Riverside%2C+CA+92507!5e0!3m2!1sen!2sus!4v1506636389909"></a>
+        <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1654.3360501286727!2d-117.32668928636255!3d33.975266520485995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcae5acf0fa1e7%3A0xa67be5dc0009c039!2sWinston+Chung+Hall%2C+Riverside%2C+CA+92507!5e0!3m2!1sen!2sus!4v1506657667501"></a>
       </small>
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer id="contacts" class="contacts">
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
@@ -174,8 +172,6 @@
             <p>Winston Chung Hall
               <br>Riverside, CA 92507</p>
             <br>
-
-
             <ul class="list-inline">
               <li class="list-inline-item">
                 <a href="https://www.facebook.com/CitrusHack/">
@@ -195,7 +191,8 @@
             </ul>
             <hr class="small">
             <div class="align-center">
-                <p>Made with <i class="fa fa-heart"></i> in Riverside, CA<br>Site by <a href="http://johnpham.net">Patrick Le</a><br>&copy; 2017 Cutie Hack</p>
+                <p>Template by: <a href="https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio">Blackrock Digital LLC</a></p>
+                <p>Modified work by: <a href="https://www.linkedin.com/in/patrick-le-b9820a101/">Patrick Le</a>
             </div>
           </div>
         </div>
