Jacob add the typeform please

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
       <div class="text-vertical-center">
         <h1>Cutie Hack V4</h1>
         <h3>November 11th, 2017</h3>
+        <h5>Applications are coming out soon!</h5>
         <br>
-        <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Apply Now!</a>
+        <a href="" class="btn btn-dark btn-lg js-scroll-trigger">Coming Out Soon!</a>
       </div>
     </header>
 
@@ -193,6 +194,7 @@
             <div class="align-center">
                 <p>Template by: <a href="https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio">Blackrock Digital LLC</a></p>
                 <p>Modified work by: <a href="https://www.linkedin.com/in/patrick-le-b9820a101/">Patrick Le</a>
+                <p>Check out <a href="">Cutie Hack V3</a>
             </div>
           </div>
         </div>
