--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
           <a class="js-scroll-trigger" href="#top">Home</a>
         </li>
         <li>
+          <a class="js-scroll-trigger" href="#top">Apply</a>
+        </li>
+        <li>
           <a class="js-scroll-trigger" href="#about">About</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#services">Apply</a>
+          <a class="js-scroll-trigger" href="#organizers">Organizers</a>
         </li>
         <li>
           <a class="js-scroll-trigger" href="#contacts" onclick=$( "#menu-close").click();>Contact</a>
@@ -51,18 +54,18 @@
     <!-- Header -->
     <header class="header" id="top">
       <div class="text-vertical-center">
-        <h1>Cutie Hack V4</h1>
+        <h1>Cutie Hack IV</h1>
         <h3>November 11th, 2017</h3>
         <h5>Applications are coming out soon!</h5>
         <br>
-        <a href="" class="btn btn-dark btn-lg js-scroll-trigger">Coming Out Soon!</a>
+        <a href="https://citrushack1.typeform.com/to/OlpYJ2" class="btn btn-dark btn-lg js-scroll-trigger">Apply Now!</a>
       </div>
     </header>
 
     <!-- About -->
     <section id="about" class="about">
       <div class="container text-center">
-        <h2>Welcome to the 4th Annual Cutie Hacks!</h2>
+        <h2>Welcome to the IV Annual Cutie Hacks!</h2>
         <br>
         <p class="lead">Cutie Hack is back this year for another round of hacking!</p>
         <p class="lead">We are welcoming people of all skills levels to come out and join us for our 12 hour hackathon.
@@ -133,8 +136,9 @@
       </div>
       <!-- /.container -->
     </section>
+    <br><br>
 
-    <section id="about" class="about">
+    <section id="organizers" class="organizers">
       <div class="container text-center">
         <!-- Organizers-->
         <header class="align-center">
@@ -168,7 +172,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
             <h4>
-              <strong>Cutie Hack V4</strong>
+              <strong>Cutie Hack IV</strong>
             </h4>
             <p>Winston Chung Hall
               <br>Riverside, CA 92507</p>
@@ -194,7 +198,7 @@
             <div class="align-center">
                 <p>Template by: <a href="https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio">Blackrock Digital LLC</a></p>
                 <p>Modified work by: <a href="https://www.linkedin.com/in/patrick-le-b9820a101/">Patrick Le</a>
-                <p>Check out <a href="../2017/site">Cutie Hack V3</a>
+                <p>Check out <a href="../2017/site/index.html">Cutie Hack V3</a>
             </div>
           </div>
         </div>
