--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="text-vertical-center">
         <h1>Cutie Hack IV</h1>
         <h3>November 11th, 2017</h3>
-        <h5>Applications are coming out soon!</h5>
+        <h5>Applications are out!</h5>
         <br>
         <a href="https://citrushack1.typeform.com/to/OlpYJ2" class="btn btn-dark btn-lg js-scroll-trigger">Apply Now!</a>
       </div>
