Fixed the alignment issue

--- a/index.html
+++ b/index.html
@@ -85,49 +85,49 @@
       </header>
       <div class="container">
         <div class="row text-center">
-              <div class="flex flex-2">
-                <div class="col align-center">
-                    <i class="fa fa-user fa-5x"></i>
-                    <h3>Who can attend?</h3>
-                    <p class="answer">We currently only accept UCR and local community college students 18 or older to participate. High School students are welcome to apply, but will be required to sign a waiver.</a></p>
-                </div>
-
-                <div class="col align-center">
-                    <i class="fa fa-briefcase fa-5x"></i>
-                    <h3>What do I bring?</h3>
-                    <p class="answer">Bring your student ID, computer, and any peripherals you may need (i.e. chargers, monitors, etc). We encourage our hackers to bring any hardware that you plan on using.</p>
-                </div>
+            <div class="flex flex-2">
+              <div class="col align-center">
+                  <i class="fa fa-user fa-5x"></i>
+                  <h3>Who can attend?</h3>
+                  <p class="answer">We currently only accept UCR and local community college students 18 or older to participate. High School students are welcome to apply, but will be required to sign a waiver.</a></p>
               </div>
-              <br><br><br>
 
-              <div class="flex flex-2">
-                <div class="col align-center">
-                    <i class="fa fa-cutlery fa-5x"></i>
-                    <h3>Will there be food?</h3>
-                    <p class="answer">Yes! We will be providing meals along with refreshments and snacks throughout the event.</p>
-                </div>
-
-                <div class="col align-center">
-                    <i class="fa fa-money fa-5x"></i>
-                    <h3>How much does Cutie Hack cost?</h3>
-                    <p class="answer">Cutie Hack is absolutely free to attend!</p>
-                </div>
+              <div class="col align-center">
+                  <i class="fa fa-briefcase fa-5x"></i>
+                  <h3>What do I bring?</h3>
+                  <p class="answer">Bring your student ID, computer, and any peripherals you may need (i.e. chargers, monitors, etc). We encourage our hackers to bring any hardware that you plan on using.</p>
               </div>
-              <br><br><br>
+            </div>
+            <br><br><br>
 
-              <div class="flex flex-2">
-                <div class="col align-center">
-                    <i class="fa fa-users fa-5x"></i>
-                    <h3>Do I need a team? How large can my team be?</h3>
-                    <p class="answer">We recommend working in a team. There will be a team formation event before hacking beings. Team sizes are capped at 4 members.</p>
-                </div>
-                <div class="col align-center">
-                    <i class="fa fa-calendar fa-5x"></i>
-                    <h3>I signed up! When do I hear back?</h3>
-                    <p class="answer">Application results will be released 1 - 2 weeks pior to the event!</p>
-                </div>
+            <div class="flex flex-2">
+              <div class="col align-center">
+                  <i class="fa fa-cutlery fa-5x"></i>
+                  <h3>Will there be food?</h3>
+                  <p class="answer">Yes! We will be providing meals along with refreshments and snacks throughout the event.</p>
               </div>
-              <br><br><br>
+
+              <div class="col align-center">
+                  <i class="fa fa-money fa-5x"></i>
+                  <h3>How much does Cutie Hack cost?</h3>
+                  <p class="answer">Cutie Hack is absolutely free to attend! All food, swag, and prizes are free to you!</p>
+              </div>
+            </div>
+            <br><br><br>
+
+            <div class="flex flex-2">
+              <div class="col align-center">
+                  <i class="fa fa-users fa-5x"></i>
+                  <h3>Do I need a team? How large can my team be?</h3>
+                  <p class="answer">We recommend working in a team. There will be a team formation event before hacking beings. Team sizes are capped at 4 members.</p>
+              </div>
+              <div class="col align-center">
+                  <i class="fa fa-calendar fa-5x"></i>
+                  <h3>I signed up! When do I hear back?</h3>
+                  <p class="answer">Application results will be released 1 - 2 weeks pior to the event!</p>
+              </div>
+            </div>
+            <br><br><br>
             <!-- /.row (nested) -->
           </div>
           <!-- /.col-lg-10 -->
