--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <div class="col align-center">
                   <i class="fa fa-money fa-5x"></i>
                   <h3>How much does Cutie Hack cost?</h3>
-                  <p class="answer">Cutie Hack is absolutely free to attend! All food, swag, and prizes are free to you!</p>
+                  <p class="answer">Cutie Hack is absolutely free to attend! All food, swag, and prizes are free for you!</p>
               </div>
             </div>
             <br><br><br>
