--- a/index.html
+++ b/index.html
@@ -140,11 +140,22 @@
 
     <section id="organizers" class="organizers">
       <div class="container text-center">
-        <!-- Organizers-->
-        <header class="align-center">
-            <h1>Organizers</h1>
-            <br>
-        </header>
+          <!-- Sponsors -->
+          <header class="align-center">
+              <h1>Sponsors</h1>
+              <br>
+          </header>
+          <div class="flex flex-1">
+              <div class="col align-center">
+                  <a href="https://www.soylent.com/"><img src="img/soylent.png" width="40%"></a>
+              </div>
+          </div>
+
+          <!-- Organizers-->
+          <header class="align-center">
+              <h1>Organizers</h1>
+              <br>
+          </header>
         <div class="flex flex-2">
             <div class="col align-center">
                 <a href="http://acmucr.org"><img src="img/acm.png" width="60%"></a>
