Added hint and Nootrobox

--- a/index.html
+++ b/index.html
@@ -145,9 +145,15 @@
               <h1>Sponsors</h1>
               <br>
           </header>
-          <div class="flex flex-1">
+          <div class="flex flex-3">
               <div class="col align-center">
-                  <a href="https://www.soylent.com/"><img src="img/soylent.png" width="40%"></a>
+                  <a href="https://hvmn.com/go-cubes"><img src="img/nootrobox.png" width="95%"></a>
+              </div>
+              <div class="col align-center">
+                  <a href="https://www.soylent.com/"><img src="img/soylent.png" width="80%"></a>
+              </div>
+              <div class="col align-center">
+                  <a href="https://www.drinkhint.com/"><img src="img/hint.png" width="95%"></a>
               </div>
           </div>
 
@@ -158,10 +164,10 @@
           </header>
         <div class="flex flex-2">
             <div class="col align-center">
-                <a href="http://acmucr.org"><img src="img/acm.png" width="60%"></a>
+                <a href="http://acmucr.org"><img src="img/acm.png" width="50%"></a>
             </div>
             <div class="col align-center">
-                <a href="http://ieee.ee.ucr.edu/"><img src="img/ieee.png" width="40%"></a>
+                <a href="http://ieee.ee.ucr.edu/"><img src="img/ieee.png" width="30%"></a>
             </div>
         </div>
       </div>
