Slightly adjusted the size of the images

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
           </header>
           <div class="flex flex-3">
               <div class="col align-center">
-                  <a href="https://hvmn.com/go-cubes"><img src="img/nootrobox.png" width="95%"></a>
+                  <a href="https://hvmn.com/go-cubes"><img src="img/nootrobox.png" width="100%"></a>
               </div>
               <div class="col align-center">
-                  <a href="https://www.soylent.com/"><img src="img/soylent.png" width="80%"></a>
+                  <a href="https://www.soylent.com/"><img src="img/soylent.png" width="90%"></a>
               </div>
               <div class="col align-center">
                   <a href="https://www.drinkhint.com/"><img src="img/hint.png" width="95%"></a>
@@ -213,8 +213,7 @@
             </ul>
             <hr class="small">
             <div class="align-center">
-                <p>Template by: <a href="https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio">Blackrock Digital LLC</a></p>
-                <p>Modified work by: <a href="https://www.linkedin.com/in/patrick-le-b9820a101/">Patrick Le</a>
+                <p>Made with <i class="fa fa-heart"></i> by: <a href="https://www.linkedin.com/in/patrick-le-b9820a101/">Patrick Le</a>
             </div>
           </div>
         </div>
