--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </section>
 
     <!-- Schedule -->
-    <section id="about" class="container-fluid">
+    <section id="about" class="schedule">
       <h1 class='text-bold text-center' style="color:blue">General Schedule</h1>
       <br /><br />
       <div class='row'>
