--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
 
   </head>
 
@@ -77,7 +77,7 @@
     </section>
 
     <!-- Schedule -->
-    <section id="about" class="schedule">
+    <section id="about" class="schedule" style="text-align: center; vertical-align: middle; margin: auto;padding: 40px 40px 40px 40px; max-width: 960px;">
       <h1 class='text-bold text-center' style="color:blue">General Schedule</h1>
       <br /><br />
       <div class='row'>
